--- a/tc-results-parser/test_python.tex
+++ b/tc-results-parser/test_python.tex
@@ -14,10 +14,10 @@
     
 \pagebreak
 \section*{Rozdanie 1}
-\handdiagramv{\vhand{1092}{}{KJ109864}{A109}}
-{\vhand{876}{A2}{A752}{J742}}
-{\vhand{AQ43}{KQJ104}{Q}{K83}}
+\handdiagramv{\vhand{876}{A2}{A752}{J742}}
+{\vhand{AQ43}{KQJT4}{Q}{K83}}
 {\vhand{KJ5}{987653}{3}{Q65}}
+{\vhand{T92}{}{KJT9864}{AT9}}
 {}
 
 \begin{table}[h!]
@@ -30,10 +30,10 @@
 
 \pagebreak
 \section*{Rozdanie 2}
-\handdiagramv{\vhand{A75}{K9}{AJ1032}{J97}}
-{\vhand{632}{A765}{Q9}{AK32}}
-{\vhand{KQ108}{J83}{754}{864}}
-{\vhand{J94}{Q1042}{K86}{Q105}}
+\handdiagramv{\vhand{632}{A765}{Q9}{AK32}}
+{\vhand{KQT8}{J83}{754}{864}}
+{\vhand{J94}{QT42}{K86}{QT5}}
+{\vhand{A75}{K9}{AJT32}{J97}}
 {NS}
 
 \begin{table}[h!]
@@ -46,10 +46,10 @@
 
 \pagebreak
 \section*{Rozdanie 3}
-\handdiagramv{\vhand{K8}{Q86}{AK763}{1096}}
-{\vhand{Q543}{AK5}{Q9}{KJ73}}
-{\vhand{A1072}{}{108542}{Q852}}
-{\vhand{J96}{J1097432}{J}{A4}}
+\handdiagramv{\vhand{Q543}{AK5}{Q9}{KJ73}}
+{\vhand{AT72}{}{T8542}{Q852}}
+{\vhand{J96}{JT97432}{J}{A4}}
+{\vhand{K8}{Q86}{AK763}{T96}}
 {EW}
 
 \begin{table}[h!]
@@ -62,10 +62,10 @@
 
 \pagebreak
 \section*{Rozdanie 4}
-\handdiagramv{\vhand{J82}{84}{10983}{8763}}
-{\vhand{K7}{QJ75}{75}{KJ542}}
-{\vhand{1093}{102}{AKJ42}{AQ9}}
-{\vhand{AQ654}{AK963}{Q6}{10}}
+\handdiagramv{\vhand{Q543}{AK5}{Q9}{KJ73}}
+{\vhand{T93}{T2}{AKJ42}{AQ9}}
+{\vhand{AQ654}{AK963}{Q6}{T}}
+{\vhand{J82}{84}{T983}{8763}}
 {NSEW}
 
 \begin{table}[h!]
@@ -77,11 +77,27 @@
 \end{table}
 
 \pagebreak
+\section*{Rozdanie 5}
+\handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
+{\vhand{}{AT4}{AQ832}{A8543}}
+{\vhand{JT64}{J82}{T64}{K72}}
+{\vhand{Q75}{753}{KJ97}{Q96}}
+{NS}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
+
+    \end{tabular}
+\end{table}
+
+\pagebreak
 \section*{Rozdanie 6}
-\handdiagramv{\vhand{A642}{}{AJ85}{J7432}}
-{\vhand{KQ10}{Q872}{K10}{A985}}
-{\vhand{J8}{AK654}{97643}{10}}
-{\vhand{9753}{J1093}{Q2}{KQ6}}
+\handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
+{\vhand{J8}{AK654}{97643}{T}}
+{\vhand{9753}{JT93}{Q2}{KQ6}}
+{\vhand{A642}{}{AJ85}{J7432}}
 {EW}
 
 \begin{table}[h!]
@@ -94,10 +110,10 @@
 
 \pagebreak
 \section*{Rozdanie 7}
-\handdiagramv{\vhand{8}{KQJ976}{732}{1083}}
-{\vhand{K109652}{105}{986}{AK}}
-{\vhand{QJ74}{}{KJ105}{QJ754}}
+\handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
+{\vhand{QJ74}{}{KJT5}{QJ754}}
 {\vhand{A3}{A8432}{AQ4}{962}}
+{\vhand{8}{KQJ976}{732}{T83}}
 {NSEW}
 
 \begin{table}[h!]
@@ -110,10 +126,10 @@
 
 \pagebreak
 \section*{Rozdanie 8}
-\handdiagramv{\vhand{9}{Q943}{109642}{Q75}}
-{\vhand{A82}{AKJ105}{K83}{K9}}
-{\vhand{53}{82}{A75}{A108643}}
-{\vhand{KQJ10764}{76}{QJ}{J2}}
+\handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
+{\vhand{53}{82}{A75}{AT8643}}
+{\vhand{KQJT764}{76}{QJ}{J2}}
+{\vhand{9}{Q943}{T9642}{Q75}}
 {}
 
 \begin{table}[h!]
@@ -126,10 +142,10 @@
 
 \pagebreak
 \section*{Rozdanie 9}
-\handdiagramv{\vhand{Q10832}{A5}{985}{Q84}}
-{\vhand{AJ}{KQJ872}{J4}{J103}}
-{\vhand{9}{10943}{Q1073}{A962}}
+\handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
+{\vhand{9}{T943}{QT73}{A962}}
 {\vhand{K7654}{6}{AK62}{K75}}
+{\vhand{QT832}{A5}{985}{Q84}}
 {EW}
 
 \begin{table}[h!]
@@ -142,10 +158,10 @@
 
 \pagebreak
 \section*{Rozdanie 10}
-\handdiagramv{\vhand{K743}{KQ9}{J}{QJ973}}
-{\vhand{652}{A843}{K975}{A5}}
-{\vhand{AQ8}{10652}{A863}{82}}
-{\vhand{J109}{J7}{Q1042}{K1064}}
+\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
+{\vhand{9}{T943}{QT73}{A962}}
+{\vhand{JT9}{J7}{QT42}{KT64}}
+{\vhand{K743}{KQ9}{J}{QJ973}}
 {NSEW}
 
 \begin{table}[h!]
@@ -158,10 +174,10 @@
 
 \pagebreak
 \section*{Rozdanie 11}
-\handdiagramv{\vhand{K72}{Q65}{KQ}{K10732}}
-{\vhand{Q643}{10}{A5432}{865}}
-{\vhand{AJ1085}{AK93}{97}{J4}}
-{\vhand{9}{J8742}{J1086}{AQ9}}
+\handdiagramv{\vhand{Q643}{T}{A5432}{865}}
+{\vhand{AJT85}{AK93}{97}{J4}}
+{\vhand{9}{J8742}{JT86}{AQ9}}
+{\vhand{K72}{Q65}{KQ}{KT732}}
 {}
 
 \begin{table}[h!]
@@ -174,10 +190,10 @@
 
 \pagebreak
 \section*{Rozdanie 12}
-\handdiagramv{\vhand{Q53}{J10965}{87}{Q103}}
-{\vhand{A82}{Q72}{AKJ10}{KJ5}}
-{\vhand{107}{K83}{Q932}{9762}}
+\handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
+{\vhand{T7}{K83}{Q932}{9762}}
 {\vhand{KJ964}{A4}{654}{A84}}
+{\vhand{Q53}{JT965}{87}{QT3}}
 {NS}
 
 \begin{table}[h!]
@@ -190,10 +206,10 @@
 
 \pagebreak
 \section*{Rozdanie 13}
-\handdiagramv{\vhand{AJ93}{KJ8}{Q42}{Q95}}
-{\vhand{107654}{653}{J73}{82}}
-{\vhand{KQ}{10742}{K108}{AJ104}}
+\handdiagramv{\vhand{T7654}{653}{J73}{82}}
+{\vhand{KQ}{T742}{KT8}{AJT4}}
 {\vhand{82}{AQ9}{A965}{K763}}
+{\vhand{AJ93}{KJ8}{Q42}{Q95}}
 {NSEW}
 
 \begin{table}[h!]
@@ -206,10 +222,10 @@
 
 \pagebreak
 \section*{Rozdanie 14}
-\handdiagramv{\vhand{K96}{K5}{KJ75}{AK97}}
-{\vhand{52}{AQ}{109643}{J1084}}
-{\vhand{A1043}{J87643}{Q}{32}}
-{\vhand{QJ87}{1092}{A82}{Q65}}
+\handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
+{\vhand{AT43}{J87643}{Q}{32}}
+{\vhand{QJ87}{T92}{A82}{Q65}}
+{\vhand{K96}{K5}{KJ75}{AK97}}
 {}
 
 \begin{table}[h!]
@@ -222,10 +238,10 @@
 
 \pagebreak
 \section*{Rozdanie 15}
-\handdiagramv{\vhand{K3}{1073}{A10873}{1043}}
-{\vhand{AJ96542}{K5}{2}{A87}}
+\handdiagramv{\vhand{AJ96542}{K5}{2}{A87}}
 {\vhand{7}{AQ9642}{QJ65}{65}}
-{\vhand{Q108}{J8}{K94}{KQJ92}}
+{\vhand{QT8}{J8}{K94}{KQJ92}}
+{\vhand{K3}{T73}{AT873}{T43}}
 {NS}
 
 \begin{table}[h!]
@@ -238,10 +254,10 @@
 
 \pagebreak
 \section*{Rozdanie 16}
-\handdiagramv{\vhand{Q10874}{QJ32}{}{KQ96}}
-{\vhand{AJ32}{107}{Q108}{8754}}
-{\vhand{6}{K854}{AJ53}{AJ102}}
+\handdiagramv{\vhand{AJ32}{T7}{QT8}{8754}}
+{\vhand{6}{K854}{AJ53}{AJT2}}
 {\vhand{K95}{A96}{K97642}{3}}
+{\vhand{QT874}{QJ32}{}{KQ96}}
 {EW}
 
 \begin{table}[h!]
@@ -254,10 +270,10 @@
 
 \pagebreak
 \section*{Rozdanie 17}
-\handdiagramv{\vhand{QJ2}{AJ7}{843}{AQ92}}
-{\vhand{A876}{3}{KQ65}{K853}}
-{\vhand{43}{K8642}{1092}{J107}}
-{\vhand{K1095}{Q1095}{AJ7}{64}}
+\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
+{\vhand{43}{K8642}{T92}{JT7}}
+{\vhand{KT95}{QT95}{AJ7}{64}}
+{\vhand{QJ2}{AJ7}{843}{AQ92}}
 {}
 
 \begin{table}[h!]
@@ -270,10 +286,10 @@
 
 \pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{A4}{KQ52}{J10}{106432}}
-{\vhand{96532}{A874}{A5}{95}}
-{\vhand{J7}{103}{K8732}{AKQ8}}
-{\vhand{KQ108}{J96}{Q964}{J7}}
+\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
+{\vhand{J7}{T3}{K8732}{AKQ8}}
+{\vhand{KQT8}{J96}{Q964}{J7}}
+{\vhand{A4}{KQ52}{JT}{T6432}}
 {NS}
 
 \begin{table}[h!]
@@ -286,10 +302,10 @@
 
 \pagebreak
 \section*{Rozdanie 19}
-\handdiagramv{\vhand{KJ1052}{Q9}{6532}{Q6}}
-{\vhand{7}{J10654}{K874}{J73}}
-{\vhand{A863}{K7}{Q109}{K1084}}
+\handdiagramv{\vhand{7}{JT654}{K874}{J73}}
+{\vhand{A863}{K7}{QT9}{KT84}}
 {\vhand{Q94}{A832}{AJ}{A952}}
+{\vhand{KJT52}{Q9}{6532}{Q6}}
 {EW}
 
 \begin{table}[h!]
@@ -302,10 +318,10 @@
 
 \pagebreak
 \section*{Rozdanie 20}
-\handdiagramv{\vhand{K984}{J63}{AJ73}{K2}}
-{\vhand{A3}{AQ1095}{K109}{Q86}}
-{\vhand{1052}{8742}{65}{AJ54}}
-{\vhand{QJ76}{K}{Q842}{10973}}
+\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
+{\vhand{T52}{8742}{65}{AJ54}}
+{\vhand{QJ76}{K}{Q842}{T973}}
+{\vhand{K984}{J63}{AJ73}{K2}}
 {NSEW}
 
 \begin{table}[h!]
@@ -318,10 +334,10 @@
 
 \pagebreak
 \section*{Rozdanie 21}
-\handdiagramv{\vhand{J84}{653}{K1094}{762}}
-{\vhand{K10732}{A98}{652}{A10}}
+\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
 {\vhand{6}{KQJ74}{AQ7}{KJ95}}
-{\vhand{AQ95}{102}{J83}{Q843}}
+{\vhand{AQ95}{T2}{J83}{Q843}}
+{\vhand{J84}{653}{KT94}{762}}
 {NS}
 
 \begin{table}[h!]
@@ -334,10 +350,10 @@
 
 \pagebreak
 \section*{Rozdanie 22}
-\handdiagramv{\vhand{AQ52}{J104}{J}{Q8653}}
-{\vhand{873}{953}{A543}{AK7}}
-{\vhand{9}{K762}{K10862}{J104}}
-{\vhand{KJ1064}{AQ8}{Q97}{92}}
+\handdiagramv{\vhand{873}{953}{A543}{AK7}}
+{\vhand{9}{K762}{KT862}{JT4}}
+{\vhand{KJT64}{AQ8}{Q97}{92}}
+{\vhand{AQ52}{JT4}{J}{Q8653}}
 {EW}
 
 \begin{table}[h!]
@@ -349,11 +365,27 @@
 \end{table}
 
 \pagebreak
+\section*{Rozdanie 23}
+\handdiagramv{\vhand{T83}{KJ762}{854}{97}}
+{\vhand{AK652}{T5}{T62}{A86}}
+{\vhand{QJ974}{93}{AKQ93}{Q}}
+{\vhand{}{AQ84}{J7}{KJT5432}}
+{NSEW}
+
+\begin{table}[h!]
+    \centering
+    \begin{tabular}{cccc}
+        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
+
+    \end{tabular}
+\end{table}
+
+\pagebreak
 \section*{Rozdanie 24}
-\handdiagramv{\vhand{A7542}{109}{10975}{A3}}
-{\vhand{QJ}{J3}{AQ432}{J1098}}
-{\vhand{K1096}{AK75}{KJ8}{K2}}
+\handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
+{\vhand{KT96}{AK75}{KJ8}{K2}}
 {\vhand{83}{Q8642}{6}{Q7654}}
+{\vhand{A7542}{T9}{T975}{A3}}
 {}
 
 \begin{table}[h!]
@@ -366,10 +398,10 @@
 
 \pagebreak
 \section*{Rozdanie 25}
-\handdiagramv{\vhand{K763}{QJ82}{7}{Q863}}
-{\vhand{AQ852}{A7}{1052}{754}}
-{\vhand{109}{K10643}{K43}{K92}}
-{\vhand{J4}{95}{AQJ986}{AJ10}}
+\handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
+{\vhand{T9}{KT643}{K43}{K92}}
+{\vhand{J4}{95}{AQJ986}{AJT}}
+{\vhand{K763}{QJ82}{7}{Q863}}
 {EW}
 
 \begin{table}[h!]
@@ -382,10 +414,10 @@
 
 \pagebreak
 \section*{Rozdanie 26}
-\handdiagramv{\vhand{94}{K}{Q1076}{K87532}}
-{\vhand{K6}{Q10654}{A95}{QJ6}}
-{\vhand{AJ73}{J9872}{2}{1094}}
-{\vhand{Q10852}{A3}{KJ843}{A}}
+\handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
+{\vhand{AJ73}{J9872}{2}{T94}}
+{\vhand{QT852}{A3}{KJ843}{A}}
+{\vhand{94}{K}{QT76}{K87532}}
 {NSEW}
 
 \begin{table}[h!]
@@ -398,10 +430,10 @@
 
 \pagebreak
 \section*{Rozdanie 27}
-\handdiagramv{\vhand{KJ98}{AQ106}{K87}{KQ}}
-{\vhand{Q743}{2}{AQ9532}{A10}}
+\handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
 {\vhand{62}{873}{J64}{98653}}
-{\vhand{A105}{KJ954}{10}{J742}}
+{\vhand{AT5}{KJ954}{T}{J742}}
+{\vhand{KJ98}{AQT6}{K87}{KQ}}
 {}
 
 \begin{table}[h!]
