--- a/tc-results-parser/test_python.tex
+++ b/tc-results-parser/test_python.tex
@@ -111,7 +111,7 @@
 \pagebreak
 \section*{Rozdanie 7}
 \handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
-{\vhand{QJ74}{}{KJT5}{QJ754}}
+{\vhand{J8}{AK654}{97643}{T}}
 {\vhand{A3}{A8432}{AQ4}{962}}
 {\vhand{8}{KQJ976}{732}{T83}}
 {NSEW}
@@ -142,7 +142,7 @@
 
 \pagebreak
 \section*{Rozdanie 9}
-\handdiagramv{\vhand{A82}{AKJT5}{K83}{K9}}
+\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
 {\vhand{9}{T943}{QT73}{A962}}
 {\vhand{K7654}{6}{AK62}{K75}}
 {\vhand{QT832}{A5}{985}{Q84}}
@@ -158,8 +158,8 @@
 
 \pagebreak
 \section*{Rozdanie 10}
-\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
-{\vhand{9}{T943}{QT73}{A962}}
+\handdiagramv{\vhand{652}{A843}{K975}{A5}}
+{\vhand{AQ8}{T652}{A863}{82}}
 {\vhand{JT9}{J7}{QT42}{KT64}}
 {\vhand{K743}{KQ9}{J}{QJ973}}
 {NSEW}
@@ -222,7 +222,7 @@
 
 \pagebreak
 \section*{Rozdanie 14}
-\handdiagramv{\vhand{52}{AQ}{T9643}{JT84}}
+\handdiagramv{\vhand{T7654}{653}{J73}{82}}
 {\vhand{AT43}{J87643}{Q}{32}}
 {\vhand{QJ87}{T92}{A82}{Q65}}
 {\vhand{K96}{K5}{KJ75}{AK97}}
@@ -286,7 +286,7 @@
 
 \pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
+\handdiagramv{\vhand{96532}{A874}{A5}{95}}
 {\vhand{J7}{T3}{K8732}{AKQ8}}
 {\vhand{KQT8}{J96}{Q964}{J7}}
 {\vhand{A4}{KQ52}{JT}{T6432}}
@@ -318,7 +318,7 @@
 
 \pagebreak
 \section*{Rozdanie 20}
-\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
+\handdiagramv{\vhand{7}{JT654}{K874}{J73}}
 {\vhand{T52}{8742}{65}{AJ54}}
 {\vhand{QJ76}{K}{Q842}{T973}}
 {\vhand{K984}{J63}{AJ73}{K2}}
@@ -334,7 +334,7 @@
 
 \pagebreak
 \section*{Rozdanie 21}
-\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
+\handdiagramv{\vhand{KT732}{A98}{652}{AT}}
 {\vhand{6}{KQJ74}{AQ7}{KJ95}}
 {\vhand{AQ95}{T2}{J83}{Q843}}
 {\vhand{J84}{653}{KT94}{762}}
@@ -366,7 +366,7 @@
 
 \pagebreak
 \section*{Rozdanie 23}
-\handdiagramv{\vhand{T83}{KJ762}{854}{97}}
+\handdiagramv{\vhand{873}{953}{A543}{AK7}}
 {\vhand{AK652}{T5}{T62}{A86}}
 {\vhand{QJ974}{93}{AKQ93}{Q}}
 {\vhand{}{AQ84}{J7}{KJT5432}}
@@ -382,8 +382,8 @@
 
 \pagebreak
 \section*{Rozdanie 24}
-\handdiagramv{\vhand{QJ}{J3}{AQ432}{JT98}}
-{\vhand{KT96}{AK75}{KJ8}{K2}}
+\handdiagramv{\vhand{T83}{KJ762}{854}{97}}
+{\vhand{AK652}{T5}{T62}{A86}}
 {\vhand{83}{Q8642}{6}{Q7654}}
 {\vhand{A7542}{T9}{T975}{A3}}
 {}
@@ -414,7 +414,7 @@
 
 \pagebreak
 \section*{Rozdanie 26}
-\handdiagramv{\vhand{AQ852}{A7}{T52}{754}}
+\handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
 {\vhand{AJ73}{J9872}{2}{T94}}
 {\vhand{QT852}{A3}{KJ843}{A}}
 {\vhand{94}{K}{QT76}{K87532}}
@@ -430,7 +430,7 @@
 
 \pagebreak
 \section*{Rozdanie 27}
-\handdiagramv{\vhand{Q743}{2}{AQ9532}{AT}}
+\handdiagramv{\vhand{K6}{QT654}{A95}{QJ6}}
 {\vhand{62}{873}{J64}{98653}}
 {\vhand{AT5}{KJ954}{T}{J742}}
 {\vhand{KJ98}{AQT6}{K87}{KQ}}
