--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -95,8 +95,8 @@ a jako że impas nie stał, skończył bez 2.
 
 Otwarcie 1\nt zablokowało przeciwników, którzy bez ustaleń nie znaleźli
 końcówki kierowej. Zawistowałam w pika, rozgrywający ściągnął atuty i zaimpasował trefla,
-Bartek ściągnął A\diams do którego powinnam wyrzucić demarkę jako że nie mam 
-Q\diams. Nie ściągnęliśmy przez to K\diams, +3.
+Bartek ściągnął A\diams, do którego Krysia zrzucła \xdiams 3. Bartek (debil) nie ściągnął \xdiams K bo uznał trójkę za markę.
+Nie ściągnęliśmy przez to K\diams, +3.
 
 \pagebreak
 \section*{Rozdanie 5}
@@ -118,9 +118,11 @@ Q\diams. Nie ściągnęliśmy przez to K\diams, +3.
 Wist K\spades.
 Coś głupiego tu się stało ale nie pamiętam.
 
+
+
 \pagebreak
 \section*{Rozdanie 6}
-\handdiagramv{\vhand{AK9832}{KQ96}{5}{JT}}
+\handdiagramv{\vhand{KQT}{Q872}{KT}{A985}}
 {\vhand{J8}{AK654}{97643}{T}}
 {\vhand{9753}{JT93}{Q2}{KQ6}}
 {\vhand{A642}{}{AJ85}{J7432}}
@@ -130,9 +132,17 @@ Coś głupiego tu się stało ale nie pamiętam.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+         & & \pass & \pass \\
+        1\diams & \dbl & 1\hearts & 1\spades \\
+        \pass & \pass & 2\spades & \pass \\
+        3\clubs & \pass & 3\diams \\  
     \end{tabular}
 \end{table}
+
+Uznałem, że ręka E jest za słaba na dorzucenie końcówki - możemy łatwo oddawać 3 topy.
+Wist \xspades K przepuszczony, następnie \xspades T (??). Krysia wyrzuciła trefla a następnie wzięła 10 lew.
+Należało jednak zauważyć, że kiery są prawie stuprocentowo 4-4, przebić 2 z nich a następnie zagrać na kara 2-2 biorąc 11.
+
 
 \pagebreak
 \section*{Rozdanie 7}
@@ -146,9 +156,17 @@ Coś głupiego tu się stało ale nie pamiętam.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+                                &&& 1\hearts \\
+        \pass & 1\spades & 2\clubs & \pass \\
+        \pass & 2\spades
     \end{tabular}
 \end{table}
+
+Wznowiłem "tylko" 2\spades oczekując maksymalnie dubla w stole oraz niedzielących się kolorów (wejście z QJ - pewnie ma układ)
+W rozgrywce chyba nic się nie dzieje.
+
+
+
 
 \pagebreak
 \section*{Rozdanie 8}
@@ -162,9 +180,23 @@ Coś głupiego tu się stało ale nie pamiętam.
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \pass & 1\hearts & \pass & 1\spades \\
+        \pass & 2\clubs & \dbl & 2\diams \\
+        \pass & 2\nt & \pass & 3\spades \\
+        \pass & 4\clubs & \dbl & 4\spades
     \end{tabular}
 \end{table}
+
+Ja z ręką S dałbym 4\spades zamiast 2\diams ale to chyba kwestia stylu.
+Pojawił się temat kontr wistowych na cue-bidy: przyjęliśmy ustalenie:
+\begin{itemize}
+    \item \rdbl = as lub renons
+    \item \pass = brak kontroli (\rdbl partnera = as)
+    \item inny cue = dobrze położony król lub singiel
+\end{itemize}
+Czy to dobre nie wiem ale chyba tak się gra
+
+
 
 \pagebreak
 \section*{Rozdanie 9}
@@ -178,14 +210,21 @@ Coś głupiego tu się stało ale nie pamiętam.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        &         1\hearts & \pass & 1\spades \\
+        \pass & 2\hearts & \pass & 3\nt \\
     \end{tabular}
 \end{table}
 
+Zdecydowałem się na pokazanie 14+ mimo tych waletów, zostałem może i słusznie opierdolony.
+Jednak jestem na pierwszej w korzystnych i otwarcie 2\hearts może być lekko
+naciągane, aby kryć bardzo szeroki przedział multi. Na + jest jednak kolor KQJ, dojście oraz wygląda na to że przeciwnik może łatwo
+dać lewę na wiście.
+
+
 \pagebreak
 \section*{Rozdanie 10}
-\handdiagramv{\vhand{AJ}{KQJ872}{J4}{JT3}}
-{\vhand{9}{T943}{QT73}{A962}}
+\handdiagramv{\vhand{652}{A843}{K975}{A5}}
+{\vhand{AQ8}{T652}{A863}{82}}
 {\vhand{JT9}{J7}{QT42}{KT64}}
 {\vhand{K743}{KQ9}{J}{QJ973}}
 {NSEW}
@@ -194,9 +233,18 @@ Coś głupiego tu się stało ale nie pamiętam.
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        &       &           \pass & \pass \\
+        2\clubs & \dbl & \pass & 2\diams \\
     \end{tabular}
 \end{table}
+
+Graliśmy sobie na pierwszym stole i zadziałał u mnie instynkt unikania gry w obronie Zapolowałem lekko świrową kontrą.
+
+Krysia musiała wynieść śmieci. Wist \xclubs Q zabity asem (1). \xdiams 5 do T i J. W ściągnął 3 piki i zagrał \xhearts K do A (2).
+Ze stołu blotka karo do \xdiams A i kontynuacja kiera do K i kiera przebitego w ręce (3). 
+Ściągnięty \xclubs K (4). Teraz trefl przebity bez sensu siódemką, co oddawało lewę.
+
+Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczywiście tak.
 
 \pagebreak
 \section*{Rozdanie 11}
