--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -322,9 +322,13 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        -- & -- & -- & 1\clubs \\
+        \pass & 1\spades & 2\hearts & \pass \\
+        \pass & 4\spades & all \pass & \\
     \end{tabular}
 \end{table}
+
+Wist Q\diams
 
 \pagebreak
 \section*{Rozdanie 16}
@@ -338,9 +342,12 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        1\spades & \pass & 2\clubs & \pass \\
+        2\hearts & \pass & 4\hearts & all \pass \\
     \end{tabular}
 \end{table}
+
+Wist 7\clubs
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -354,9 +361,13 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        -- & 1\diams & \pass & 1\hearts \\
+        \pass & 1\spades & \pass & 2\spades \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Wist 10\clubs
 
 \pagebreak
 \section*{Rozdanie 18}
@@ -369,10 +380,14 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} & \vul{N} (B) & \nvul{E} & \vul{S} (K)\\
+        -- & -- & \alrts{1\nt} & \pass \\
+        2\clubs & \pass & 2\diams & \pass \\
+        3\nt & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Wist K\spades
 
 \pagebreak
 \section*{Rozdanie 19}
@@ -386,9 +401,14 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        -- & -- & -- & 1\nt \\
+        \pass & 2\diams & \pass & 2\hearts \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Wist 5\diams\\
+To jest to co wyszłam 8 spod K\clubs
 
 \pagebreak
 \section*{Rozdanie 20}
@@ -402,9 +422,13 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        1\clubs & \dbl & \pass & 1\spades \\
+        \pass & 2\hearts & \pass & 2\nt \\
+        \pass & 3\nt & all \pass & \\
     \end{tabular}
 \end{table}
+
+Wist 6\hearts
 
 \pagebreak
 \section*{Rozdanie 21}
@@ -417,10 +441,15 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        \nvul{W} (B) & \vul{N} & \nvul{E} (K) & \vul{S}\\
+        -- & 1\spades & 2\hearts & 2\spades \\
+        \pass & \pass & \dbl & \pass \\
+        3\hearts & \pass & \pass & 3\spades \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+Wist K\hearts
 
 \pagebreak
 \section*{Rozdanie 22}
@@ -434,9 +463,13 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        -- & -- & \pass & 1\spades \\
+        \pass & \alrts{1\nt} & all \pass & \\
     \end{tabular}
 \end{table}
+
+1\nt = inwit z fitem, 4333\\
+Wist 6\diams
 
 \pagebreak
 \section*{Rozdanie 23}
@@ -449,10 +482,16 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (B) & \vul{N} & \vul{E} (K) & \vul{S}\\
+        -- & -- & -- & 1\spades \\
+        2\clubs & 2\hearts & 2\nt & 4\spades \\
+        4\nt & \pass & 5\clubs & \dbl \\
+        all \pass & & & \\
     \end{tabular}
 \end{table}
+
+XD\\
+Wist 8\spades
 
 \pagebreak
 \section*{Rozdanie 24}
@@ -465,10 +504,14 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (B) & \nvul{N} & \nvul{E} (K) & \nvul{S}\\
+        \pass & 1\diams & 1\nt & \pass \\
+        2\hearts & \pass & 3\spades & \pass \\
+        4\spades & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Wist 6\diams, oddane A\diams i przebitka.
 
 \pagebreak
 \section*{Rozdanie 25}
@@ -482,9 +525,12 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
-
+        \pass & \pass & 3\diams & all \pass \\
     \end{tabular}
 \end{table}
+
+Wist 2\spades\\
+Nie no gość miał 13, dyskusyjne to otwarcie
 
 \pagebreak
 \section*{Rozdanie 26}
@@ -497,10 +543,15 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        \vul{W} (B) & \vul{N} & \vul{E} (K) & \vul{S}\\
+        -- & -- & \pass & 1\spades \\
+        \pass & 2\hearts & \pass & 3\diams \\
+        \pass & 3\nt & all \pass & \\
     \end{tabular}
 \end{table}
+
+Wist 9\clubs\\
+Wpisane na złą linię :(
 
 \pagebreak
 \section*{Rozdanie 27}
@@ -513,9 +564,12 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        \nvul{W} (B) & \nvul{N} & \nvul{E} (K) & \nvul{S}\\
+        -- & -- & -- & \alrts{2\diams} \\
+        2\nt & all \pass & & \\
     \end{tabular}
 \end{table}
+
+Wist 5\diams
 
 \end{document}
