--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -238,7 +238,7 @@ dać lewę na wiście.
     \end{tabular}
 \end{table}
 
-Graliśmy sobie na pierwszym stole i zadziałał u mnie instynkt unikania gry w obronie Zapolowałem lekko świrową kontrą.
+Graliśmy sobie na pierwszym stole i zadziałał u mnie instynkt unikania gry w obronie. Zapolowałem lekko świrową kontrą.
 
 Krysia musiała wynieść śmieci. Wist \xclubs Q zabity asem (1). \xdiams 5 do T i J. W ściągnął 3 piki i zagrał \xhearts K do A (2).
 Ze stołu blotka karo do \xdiams A i kontynuacja kiera do K i kiera przebitego w ręce (3). 
@@ -258,13 +258,20 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        1\clubs & \pass & 1\spades & \pass \\
+        1\nt & \pass & 2\clubs & \pass \\
+        2\spades & \pass & 4\spades \\
     \end{tabular}
 \end{table}
 
+Wist \xdiams J do Asa, odwrót \xhearts T. Rozgrywający zakręca \spades J do Q, trefl do Asa, przebitka, claim. 
+
+
+
+
 \pagebreak
 \section*{Rozdanie 12}
-\handdiagramv{\vhand{Q643}{T}{A5432}{865}}
+\handdiagramv{\vhand{A82}{Q72}{AKJT}{KJ5}}
 {\vhand{T7}{K83}{Q932}{9762}}
 {\vhand{KJ964}{A4}{654}{A84}}
 {\vhand{Q53}{JT965}{87}{QT3}}
@@ -274,9 +281,18 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \vul{N} & \nvul{E} & \vul{S}\\
-
+        1\diams & \pass & 1\spades & \pass \\
+        2\nt & \pass & 3\clubs & \pass \\
+        3\hearts & \pass & 3\spades & \pass \\
+        3\nt & \pass & 4\clubs & \pass \\
+        4\diams & \pass & 4\hearts & \pass \\
+        4\spades \\
     \end{tabular}
 \end{table}
+
+Otwarłem karo z czwórki bo tak się umówiliśmy. Natomiast raczej nie powinienem tak robić z 18-20, tylko z 12-14.
+Dałem 3NT które chciałem do gry, ale niestety było non serious. Na szczęście nie sprowokowałem partnerki zbyt mocno.
+
 
 \pagebreak
 \section*{Rozdanie 13}
@@ -290,9 +306,15 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \vul{W} & \vul{N} & \vul{E} & \vul{S}\\
-
+        &         \pass & 1\nt & \pass \\
+        3\nt \\
     \end{tabular}
 \end{table}
+
+Wist \xhearts 9 nie przemawia do mnie kompletnie. Ale co ja będę gadał, jak 9 wzięła lewę i to jeszcze z dołożoną ilościówką.
+To skończyło rozdanie. Ja bym wyjął karo.
+
+
 
 \pagebreak
 \section*{Rozdanie 14}
@@ -306,9 +328,24 @@ Czy kolor karowy gra się do 10? Krysia policz bo ja nie umiem ale chyba rzeczyw
     \centering
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
-
+        &       &             2\diams & \pass \\
+        3\diams & \pass & 4\hearts \\
     \end{tabular}
 \end{table}
+
+Niestety odwaliłem tu pajacerkę turnieju. Wist \xdiams 9 do A i trefl do Asa.
+Rozgrywający usunął 2 piki na kara, przeszedł pikiem na stół i zagrał kiera do K i A.
+Tu trochę automatycznie wyszedłem w pika. W zabił królem i zagrał kiera.
+
+No i nastąpił kasztan. Pomyślałem o promocji, bo partnerka dołożyła \xhearts 9.
+Jednak nie wyszedłem w karo, bojąc się (naiwnie z licytacji), że to wyjście pod podwójny renons, a W wyrzuci trefla.
+
+Jest to niepoprawne myślenie. Jeśli W nie ma \xclubs K, wyrzuciłby przecież w trzeciej lewie trefla ze stołu, a nie pika.
+Zatem wyjście w karo na pewno nie wypuzcza, a daje możliwość pięknego obłożenia końcówki jako jedyni na sali.
+
+
+
+
 
 \pagebreak
 \section*{Rozdanie 15}
