--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -329,7 +329,8 @@ To skończyło rozdanie. Ja bym wyjął karo.
     \begin{tabular}{cccc}
         \nvul{W} & \nvul{N} & \nvul{E} & \nvul{S}\\
         &       &             2\diams & \pass \\
-        3\diams & \pass & 4\hearts \\
+        2\nt & \pass & 3\diams & \pass \\
+        4\hearts \\
     \end{tabular}
 \end{table}
 
@@ -338,7 +339,7 @@ Rozgrywający usunął 2 piki na kara, przeszedł pikiem na stół i zagrał kie
 Tu trochę automatycznie wyszedłem w pika. W zabił królem i zagrał kiera.
 
 No i nastąpił kasztan. Pomyślałem o promocji, bo partnerka dołożyła \xhearts 9.
-Jednak nie wyszedłem w karo, bojąc się (naiwnie z licytacji), że to wyjście pod podwójny renons, a W wyrzuci trefla.
+Jednak nie wyszedłem w karo, bojąc się, że to wyjście pod podwójny renons, a W wyrzuci trefla.
 
 Jest to niepoprawne myślenie. Jeśli W nie ma \xclubs K, wyrzuciłby przecież w trzeciej lewie trefla ze stołu, a nie pika.
 Zatem wyjście w karo na pewno nie wypuzcza, a daje możliwość pięknego obłożenia końcówki jako jedyni na sali.
@@ -365,7 +366,20 @@ Zatem wyjście w karo na pewno nie wypuzcza, a daje możliwość pięknego obło
     \end{tabular}
 \end{table}
 
-Wist Q\diams
+Wist Q\diams. Zagrałem jak przedszkolak i wsadziłem Króla natychmiast gryząc się w język 
+(choć to nic nie zmienia ale daje szansę na błąd). Oddałem 3 lewy i przyszło trafić pika.
+Biorąc pod uwagę, że jeśli W ma Króla, to E wszedł na 9PC, a W nie podniósł z fitem z niezłym 7PC, zagrałem z góry.
+
+Jest to niepoprawne, gdyż mam więcej przesłanek. Gdyby W miał 4 kiery, raczej nie spasowałby na 2\hearts. Zatem E ma ich 6.
+W nie ma także \xdiams ATxxxx, bo często wszedłby 3\diams. E nie ma ponadto singla trefl (brak wistu).
+
+W ten sposób E ma zwykle 1-6-4-2, a karta którą ma zdecydowanie wystarcza na wejście. Zatem przesłanka punktowa jest niewystarczająca.
+E nadal może mieć \hhand{K}{AQxxxx}{QJx}{xxx}, ale jest to mniej prawdopodobne.
+
+Czy W ze swoją kartą nie powinienbył podnieść w 3\hearts? Raczej nie. 
+Król pik jest źle położony oraz nie mamy figury w kierach i partner może wypuścić na wiście.
+
+Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
 
 \pagebreak
 \section*{Rozdanie 16}
