--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -398,7 +398,11 @@ Co ciekawe za 4\spades= było 20\% bo sala wistowała w kiera.
     \end{tabular}
 \end{table}
 
-Wist 7\clubs
+Wist 7\clubs. Rozgrywający myśli 3 minuty, po czym bije w stole i gra pika do \xspades T i J. 
+Z braku lepszego pomysłu kontynuuję trefla do przebitki. S gra \xhearts A i blotkę, którą W bije. Następnie ściąga trefle, przebija pika,
+gra karo. S bez sensu wskakuje Królem wypuszczając kontrakt. Jak rozgrywający to przegrał - odeszło w zapomnienie.
+
+
 
 \pagebreak
 \section*{Rozdanie 17}
@@ -418,12 +422,14 @@ Wist 7\clubs
     \end{tabular}
 \end{table}
 
-Wist 10\clubs
+Wist 10\clubs. Jakaś nuda. +2.
+
+
 
 \pagebreak
 \section*{Rozdanie 18}
-\handdiagramv{\vhand{A876}{3}{KQ65}{K853}}
-{\vhand{43}{K8642}{T92}{JT7}}
+\handdiagramv{\vhand{96532}{A874}{A5}{95}}
+{\vhand{J7}{T3}{K8732}{AKQ8}}
 {\vhand{KQT8}{J96}{Q964}{J7}}
 {\vhand{A4}{KQ52}{JT}{T6432}}
 {NS}
@@ -438,28 +444,42 @@ Wist 10\clubs
     \end{tabular}
 \end{table}
 
-Wist K\spades
+Wist K\spades, który bierze \spades 4, 6 (unblock ilościówką!) i 7. Dalej kontynuacja \spades 8.
+
+Czy dało się to policzyć? Otóż tak!
+\begin{itemize}
+    \item Systemowo zrzutka jest ilościowa
+    \item Brakuje nam J, 9, 5, 3, 2 - czyli 6 jest wysoka!
+    \item Jeśli N zrzuca z trzech pików, to E musi mieć 4, w tym jednego pod stołem (dał 2\diams).
+\end{itemize}
+
+Wniosek - N ma 5 pików i trzeba wyjść damą. Na szczęście bez konsekwencji.
+
 
 \pagebreak
 \section*{Rozdanie 19}
-\handdiagramv{\vhand{96532}{A874}{A5}{95}}
-{\vhand{J7}{T3}{K8732}{AKQ8}}
-{\vhand{KQT8}{J96}{Q964}{J7}}
-{\vhand{A4}{KQ52}{JT}{T6432}}
+\handdiagramv{\vhand{7}{JT654}{K874}{J73}}
+{\vhand{A863}{K7}{QT9}{KT84}}
+{\vhand{Q94}{A832}{AJ}{A952}}
+{\vhand{KJT52}{Q9}{6532}{Q6}}
 {EW}
 
 \begin{table}[h!]
     \centering
     \begin{tabular}{cccc}
-        \vul{W} & \nvul{N} & \vul{E} & \nvul{S}\\
+        \vul{W} & \nvul{N} & \vul{E} & \nvul{S} \\
         -- & -- & -- & 1\nt \\
         \pass & 2\diams & \pass & 2\hearts \\
         all \pass & & & \\
     \end{tabular}
 \end{table}
 
-Wist 5\diams\\
-To jest to co wyszłam 8 spod K\clubs
+Wist 5\diams do T i J. \xhearts A, kier do K. \xclubs 8 do Q.
+
+No i wtopa. Wyszedłem nieco automatycznie w pika, bo stwierdziłem, że E na pewno nie wychodzi ósemką mając KT i jest ryzyko, 
+że S usunie pika z dziadka. Jednak niezależnie od tego, należało zabezpieczyć się grając \xspades K! A następnie trefla, który
+już nie mógł wypuszczać lewy. 
+
 
 \pagebreak
 \section*{Rozdanie 20}
