--- a/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
+++ b/KrysiaBartek2024/OldSystemFiles/others/analyses/zaczek_25_09_24.tex
@@ -483,10 +483,10 @@ już nie mógł wypuszczać lewy.
 
 \pagebreak
 \section*{Rozdanie 20}
-\handdiagramv{\vhand{96532}{A874}{A5}{95}}
-{\vhand{J7}{T3}{K8732}{AKQ8}}
-{\vhand{KQT8}{J96}{Q964}{J7}}
-{\vhand{A4}{KQ52}{JT}{T6432}}
+\handdiagramv{\vhand{A3}{AQT95}{KT9}{Q86}}
+{\vhand{T52}{8742}{65}{AJ54}}
+{\vhand{QJ76}{K}{Q842}{T973}}
+{\vhand{K984}{J63}{AJ73}{K2}}
 {NSEW}
 
 \begin{table}[h!]
@@ -499,7 +499,14 @@ już nie mógł wypuszczać lewy.
     \end{tabular}
 \end{table}
 
-Wist 6\hearts
+Wist 6\hearts, pasywny, od partnerki \xhearts 2. Natychmiast bioirę to za lavinthala (ilościówka nie ma sensu).
+Rozgrywający gra karo z ręki.
+
+Widzę, że trefle jadą. Policzyłem lewy jeśli puszczę: 2 piki, 5 kierów i karo = 8. Niewiedzieć czemu jednak 
+perspektywa natychmiastowego efektownego wyjścia \xclubs K była zbyt kusząca.
+
+Należało puścić, dając S szansę na błędne zagranie do Króla, które przegrywa.
+
 
 \pagebreak
 \section*{Rozdanie 21}
